--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   </head>
   <body>
     <div id="main"> 
-      <h1>library</h1>
-      <p>+ Add Book</p>
+      <h2>My Library</h2>
+      <h3>+ Add Book</h3>
       </div>
       <div id="books">
       </div>
       <div id="form">
-        <h1>Add new book</h1>
+        <h2>Add new book</h2>
         <input id="title" class="input" type="text" maxlength="20" placeholder="title" required > 
         <input id="author" class="input" type="text" maxlength="20" placeholder="author" required >
         <input id="pages" class="input" type="number" min="10" max="500" placeholder="pages" required>
         <label for="status">Have you read it?</label>
-       <input id="read" type="checkbox" name="status" > <br>
+       <input id="read" type="checkbox" name="status" class="checkbox"> <br>
         <button id="submit">submit</button>
       </div>
   </body>
