--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>My Library</title>
-  <script src="script.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
+
   <body>
-    <div id="main"> 
+    <div id="main">
       <h2>My Library</h2>
       <h3>+ Add Book</h3>
-      </div>
-      <div id="books">
-      </div>
-      <div id="form">
-        <h2>Add new book</h2>
-        <input id="title" class="input" type="text" maxlength="20" placeholder="title" required > 
-        <input id="author" class="input" type="text" maxlength="20" placeholder="author" required >
-        <input id="pages" class="input" type="number" min="10" max="500" placeholder="pages" required>
-        <label for="status">Have you read it?</label>
-       <input id="read" type="checkbox" name="status" class="checkbox"> <br>
-        <button id="submit">submit</button>
-      </div>
+    </div>
+    <div id="books"></div>
+    <div id="form">
+      <h2>Add new book</h2>
+      <input
+        id="title"
+        class="input"
+        type="text"
+        maxlength="20"
+        placeholder="title"
+        required
+      />
+      <input
+        id="author"
+        class="input"
+        type="text"
+        maxlength="20"
+        placeholder="author"
+        required
+      />
+      <input
+        id="pages"
+        class="input"
+        type="number"
+        min="10"
+        max="500"
+        placeholder="pages"
+        required
+      />
+      <label for="status">Have you read it?</label>
+      <input id="read" type="checkbox" name="status" class="checkbox" /> <br />
+      <button id="submit">submit</button>
+    </div>
   </body>
 </html>
